<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.habittrackerapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_todo_list"
        android:name="com.example.habittrackerapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_todo_list"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_education"
        android:name="com.example.habittrackerapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_education"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.habittrackerapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>